card alignment with dropdown fixed

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -64,8 +64,7 @@ input:focus::placeholder {
 .cards{
   position: relative;
   padding: unset;
-  top: 17
-  0px;
+  top: 170px;
    /* margin: -6px;*/
     @media only screen and (min-width: $largeDevice) {
     top: 70px;
